<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/ic_baseline_phone_android_24"
        android:layout_gravity="center_horizontal"
        android:id="@+id/img_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"/>
<!--    this is Phone design-->

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/ln_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#000"
            android:textAlignment="center"
            android:text="@string/phone_number"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="#777777"
            android:textAlignment="center"
            android:text="@string/please_enter_your_phone_to_continue"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColorHint="#c5c5c5"
            android:textColor="#000"
            android:textAlignment="center"
            android:padding="10dp"
            android:inputType="phone"
            android:hint="+84xxxxxxx"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="Continue"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
<!--    this is OTP design-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/ln_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#000"
            android:textAlignment="center"
            android:text="@string/verification_code"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_codeSend"
            android:textColor="#777777"
            android:textAlignment="center"
            android:text="@string/please_enter_your_code_otp"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColorHint="#c5c5c5"
            android:textColor="#000"
            android:textAlignment="center"
            android:padding="10dp"
            android:inputType="phone"
            android:hint="00000"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:id="@+id/edt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/didn_t_get_otp_resend"
            android:textColor="#777777"
            android:textAlignment="center"
            android:padding="5dp"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:id="@+id/txt_resendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/submit"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_codeSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>